--- a/gb/20/1/25/n11819806.md
+++ b/gb/20/1/25/n11819806.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jcqvxr322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jcqvxr322/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jcqvxr322/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jcqvxr322/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jcqvxr322/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jcqvxr322/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jcqvxr322/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jcqvxr322/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>偕众星穿古装拍片 梁心颐、王若琳推年味歌曲</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001250032451487-600x400.jpg" />
 <h6>左起第一排：小D、安娜、Fanny、Lara梁心颐、王大文，左第二排Vicky Sun、王若琳，左起第三排ECHO李昶俊、倪安东、白巧克力、Lalo、荣忠豪。（固力狗娱乐提供）
 </h6>
 <hr>
-	<p>【大纪元2020年01月25日讯】2020新团体阿卡贝拉家族“<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E5%B0%B4%E5%B0%AC%E7%BE%8E%E5%A3%B0.md#1">尴尬美声</a>”翻唱<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E6%96%87.md#1">王大文</a>旧作《鞭炮》歌曲呈现浓浓年节气氛，尴尬美声成员有：<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E6%A2%81%E5%BF%83%E9%A2%90.md#1">梁心颐</a>（Lara）、<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E6%96%87.md#1">王大文</a> 、<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E7%8E%8B%E8%8B%A5%E7%90%B3.md#1">王若琳</a>、<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E5%80%AA%E5%AE%89%E4%B8%9C.md#1">倪安东</a>、荣忠豪、ECHO李昶俊、小D、Fanny、安娜、Lalo、Pierre、Vicky Sun和白巧克力，都穿上古装为MV粉墨登场。</p>
-<p>《鞭炮》是音乐总监王大文的作品，也是“<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E5%B0%B4%E5%B0%AC%E7%BE%8E%E5%A3%B0.md#1">尴尬美声</a>”创办时第一首学会的歌曲。只要唱这首歌就会让13位团员觉得好温暖，而大家希望把这份温暖分享出去，所以特别拍了一个年兽故事的“贺岁片”。</p>
-<p>剧情是由<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E5%80%AA%E5%AE%89%E4%B8%9C.md#1">倪安东</a>、<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E7%8E%8B%E8%8B%A5%E7%90%B3.md#1">王若琳</a>和导演Lalo讨论出来的，大家穿着古装是希望呈现一种“传说中”的氛围，但因为“尴尬美声”本来就是在追求一种无厘头，所以也没有特别符合逻辑，故事的村落里面混合了不同朝代的贵族、武士、老百姓，甚至还有一位团员Vicky Sun的服装相当像黑魔女的造型。</p>
-<p>李昶俊（Echo）身穿隐士服却拿着麦克风beatbox，团里唯一的外国人成员白巧克力套上碎花连身装跟灰色假发，模样跟水果奶奶、阳婆婆的打扮有得拼。Lara<ahref="https://github.com/jcqvxr322/djy/blob/master/gb/tag/%E6%A2%81%E5%BF%83%E9%A2%90.md#1">梁心颐</a>扮演姑娘，因为怕挡到后面的人她整首歌半蹲唱。</p>
-<figure id="attachment_11819854" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/01/2001250032411487.jpg"><img class="wp-image-11819854" src="https://i.epochtimes.com/assets/uploads/2020/01/2001250032411487.jpg" alt="" width="450" b="749" /></a><figcaption class="wp-caption-text">梁心颐（左）新团体阿卡贝拉家族“尴尬美声”翻唱王大文旧作《鞭炮》，与众星穿古装拍片，扮演姑娘。（固力狗娱乐提供）</figcaption></figure>
+	<p>【大纪元2020年01月25日讯】2020新团体阿卡贝拉家族“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%B4%E5%B0%AC%E7%BE%8E%E5%A3%B0.md#1">尴尬美声</a>”翻唱<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E6%96%87.md#1">王大文</a>旧作《鞭炮》歌曲呈现浓浓年节气氛，尴尬美声成员有：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A2%81%E5%BF%83%E9%A2%90.md#1">梁心颐</a>（Lara）、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E6%96%87.md#1">王大文</a> 、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E8%8B%A5%E7%90%B3.md#1">王若琳</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%80%AA%E5%AE%89%E4%B8%9C.md#1">倪安东</a>、荣忠豪、ECHO李昶俊、小D、Fanny、安娜、Lalo、Pierre、Vicky Sun和白巧克力，都穿上古装为MV粉墨登场。</p>
+<p>《鞭炮》是音乐总监王大文的作品，也是“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%B4%E5%B0%AC%E7%BE%8E%E5%A3%B0.md#1">尴尬美声</a>”创办时第一首学会的歌曲。只要唱这首歌就会让13位团员觉得好温暖，而大家希望把这份温暖分享出去，所以特别拍了一个年兽故事的“贺岁片”。</p>
+<p>剧情是由<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%80%AA%E5%AE%89%E4%B8%9C.md#1">倪安东</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E8%8B%A5%E7%90%B3.md#1">王若琳</a>和导演Lalo讨论出来的，大家穿着古装是希望呈现一种“传说中”的氛围，但因为“尴尬美声”本来就是在追求一种无厘头，所以也没有特别符合逻辑，故事的村落里面混合了不同朝代的贵族、武士、老百姓，甚至还有一位团员Vicky Sun的服装相当像黑魔女的造型。</p>
+<p>李昶俊（Echo）身穿隐士服却拿着麦克风beatbox，团里唯一的外国人成员白巧克力套上碎花连身装跟灰色假发，模样跟水果奶奶、阳婆婆的打扮有得拼。Lara<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%A2%81%E5%BF%83%E9%A2%90.md#1">梁心颐</a>扮演姑娘，因为怕挡到后面的人她整首歌半蹲唱。</p>
+<figure id="attachment_11819854" aria-describedby="caption-attachment-11819854" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/01/2001250032411487.jpg"><img class="wp-image-11819854" src="https://i.epochtimes.com/assets/uploads/2020/01/2001250032411487.jpg" alt="" width="450" b="749" /></a><figcaption id="caption-attachment-11819854" class="wp-caption-text">梁心颐（左）新团体阿卡贝拉家族“尴尬美声”翻唱王大文旧作《鞭炮》，与众星穿古装拍片，扮演姑娘。（固力狗娱乐提供）</figcaption></figure>
 <p>但因为服装的关系完全看不出来，大家笑她就像小朋友，跟王若琳整整差了一颗头。团里最高大的倪安东笑说其他服装都太小件所以他逼不得已当皇帝。为王大文设定的角色是村里的长老，没想到事后才知道他这个装扮是乞丐帮主。</p>
 <p>《鞭炮》这首歌收录在王大文2013年的首张专辑，是他第一次在台湾过年有感而发所写的，唯一的遗憾就是觉得这首歌应该要很多人声一起唱，万万没想到多年后会由这个阿卡贝拉家族完成他的梦想。</p>
 <p>“尴尬美声”今年第一场表演也将在初四献给开了22年的低调live house“Oldie Goodie”。大家努力为演出筹备，连过年都不放假，Lara严厉的在初一安排练团。除了持续现场演出，《尴尬美声》今年也将推出七年级生经典歌曲的翻唱系列。</p>
@@ -20,42 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/14/7/18/n4203327.md#1">李千娜与Echo外出被拍 笑撇恋情纯聚餐</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/16/7/24/n8132394.md#1">李千娜、ECHO交往两年 首曝同框合照</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/17/3/13/n8903996.md#1">网路直播首谈李千娜 ECHO：想让爱情保鲜</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/17/9/22/n9657080.md#1">当广播金钟颁奖人 毕书尽将携手黄子佼揭奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/7/18/n4203327.md#1">李千娜与Echo外出被拍 笑撇恋情纯聚餐</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/24/n8132394.md#1">李千娜、ECHO交往两年 首曝同框合照</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/3/13/n8903996.md#1">网路直播首谈李千娜 ECHO：想让爱情保鲜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/9/22/n9657080.md#1">当广播金钟颁奖人 毕书尽将携手黄子佼揭奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/jcqvxr322/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/16/n11191240.md#1" target="_blank">林辉：诬陷美国发动细菌战 毛周被打脸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/26/n12433081.md#1">奇人预言“靖康之难”：天星不照 火龙骑日</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/8/n12462258.md#1">香港一名街头歌手的故事</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466587.md#1">一群美军士兵称 在韩战时遭UFO以光线攻击</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466299.md#1">女子休克时灵魂出窍 看见医生在抢救自己</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/9/24/n12428110.md#1">“自写履历”有多难？醉入冥府见奇闻</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12470614.md#1">【有冇搞错】双十讲话三密码 蔡英文踩中共痛点</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/8/26/n12359236.md#1">【思想领袖】中国的盖世太保仍在运作</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/8/n12461524.md#1">【纽约调查】纽约市卫生局传单 “中国病毒”惹风波</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12465933.md#1">从食品到日用品 在Costco做六件事可省钱</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467642.md#1">蓬佩奥：中共已开始在各方面付出代价</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468085.md#1">疫情扩大 青岛大规模测核酸 多地发旅行警告</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469576.md#1">抗癌成功首晒全家福照 余苑绮灿笑：终于达成</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468741.md#1">章子怡携女探班汪峰 意外曝光手上硕大钻戒</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468501.md#1">疫情下对赌失败 周星驰将与大陆金主对簿公堂</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12471021.md#1">BTS提韩战惹怒五毛 中共战狼发言人罕见灭火</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12468629.md#1">一家四口生日只差一天 吴尊分享最棒生日礼物</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469663.md#1">被主人打毒针并活埋 小狗自己挖开坟墓逃出</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/12/n12469863.md#1">前美国防部官员：应租F-35战机给台湾抗共</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/10/n12466530.md#1">几乎完整 一战法国潜艇残骸现突尼斯海域</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467786.md#1">好疗愈！ 台中搜救犬挥舞国旗参加升旗典礼</a></li>
-<li><a href="https://github.com/jcqvxr322/djy/blob/master/gb/20/10/11/n12467896.md#1">美国调查：搬家的压力比离婚或分手更大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jcqvxr322/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jcqvxr322/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/25/n11819806.htm">偕众星穿古装拍片 梁心颐、王若琳推年味歌曲</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/25/n11819806.htm">偕众星穿古装拍片 梁心颐、王若琳推年味歌曲</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jcqvxr322/djy/blob/master/gb/20/1/25/n11819806.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jcqvxr322/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jcqvxr322/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jcqvxr322/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jcqvxr322/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jcqvxr322/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/1/25/n11819806.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
